BEISDEAS-303 fix mini EPC header on IE

--- a/angular/src/app/questionnaire/questions/confirm-epc-question/confirm-epc-question.component.scss
+++ b/angular/src/app/questionnaire/questions/confirm-epc-question/confirm-epc-question.component.scss
@@ -297,7 +297,7 @@ $go-button-right-chevron-width: 20px;
       }
 
       ::ng-deep .data-card {
-        justify-content: baseline;
+        justify-content: flex-start;
 
         .number-value {
           margin: auto;
@@ -368,7 +368,7 @@ $go-button-right-chevron-width: 20px;
         margin-bottom: 40px;
 
         ::ng-deep .data-card {
-          justify-content: baseline;
+          justify-content: flex-start;
 
           .number-value {
             margin: auto;
